traversal.snake.Snake.scala.error
Compilation error:
Snake:3: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
if (getDirection()==(Direction.EAST)) 
^Snake:4: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
                         {left();if (!isFacingWall()) {test<-true}; right()}; 
                         ^Snake:5: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
if (getDirection()==Direction.WEST) 
^Snake:6: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
{right(); test=!isFacingWall(); left()}; return(test)}
^Snake:6: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
{right(); test=!isFacingWall(); left()}; return(test)}
                                         ^